[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Florimond Boquet <florimond.boquet@ext.cdiscount.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
